# PR_warden

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_agent_result.py  003_drop_override.py  004_add_pr_mute.py  005_add_webhook_event.py  006_webhook_event_unique_delivery.py
src/pr_warden/: commands.py  composer.py  config.py  db.py  log.py  main.py  models.py  repo_config.py
src/pr_warden/agent/: __init__.py  context.py  loop.py  prompts.py  review.py  schemas.py  spec.py
src/pr_warden/agent/tools/: __init__.py  _repo_files.py  base.py  check_security_patterns.py  done.py  find_references.py  get_author_history.py  get_file.py  get_issue.py  get_pr_diff.py  get_repo_conventions.py  git_blame.py  search_code.py
src/pr_warden/checks/: __init__.py  diff_aware.py  impact.py  intent.py  no_diff.py  registry.py
src/pr_warden/core/: client.py  diff.py
src/pr_warden/github/: auth.py  client.py  schemas.py  webhooks.py
src/pr_warden/prompts/: agent_system_v1.md  summarizer_v1.md
src/pr_warden/summarizer/: __init__.py  client.py  prompts.py  runner.py  schemas.py
tests/: conftest.py  test_agent.py  test_agent_wiring.py  test_author_context.py  test_checks.py  test_ci_awareness.py  test_commands.py  test_composer.py  test_impact.py  test_intent_scope.py  test_mute.py  test_prompt_injection.py  test_repo_config.py  test_stats_auth.py  test_summarizer.py  test_webhook_queue.py  test_webhook_signature.py
